@@ -10,6 +10,7 @@ Trunk (1.1.3+svn):
    * Fixed a bug where the wrong ability description could be extracted from
      a unit type with multiple abilities. This was causing an incorrect
      description for Illuminate in Help.
+   * Units are now sorted first by race and then by name.
  * WML engine
    * modify ranged animation timing, all animations (attack, defend, missile
    * leading_image is deprecated please use the new [leading_anim] animation
